AM_CPPFLAGS = -Ich-cpp-utils
lib_LTLIBRARIES = libch-cpp-utils.la
libch_cpp_utils_la_SOURCES = fts.cpp  \
									  tcp-client.cpp  \
									  tcp-listener.cpp  \
									  tcp-server.cpp  \
									  thread.cpp          \
									  thread-job.cpp  \
									  thread-pool.cpp \
									  fs-watch.cpp \
									  events.cpp \
									  dirtree.cpp \
									  semaphore.cpp \
									  base64.cpp \
									  http-client.cpp \
									  http-request.cpp \
									  http-connection.cpp \
									  http-thread.cpp \
									  http-server-pool.cpp

libch_cpp_utils_adir = $(includedir)/ch-cpp-utils
nobase_include_HEADERS = ch-cpp-utils/fts.hpp  \
								 ch-cpp-utils/linked-hash-map.hpp  \
								 ch-cpp-utils/logger.hpp  \
								 ch-cpp-utils/tcp-client.hpp  \
								 ch-cpp-utils/tcp-listener.hpp  \
								 ch-cpp-utils/tcp-server.hpp  \
								 ch-cpp-utils/thread-get-job.hpp  \
								 ch-cpp-utils/thread.hpp  \
								 ch-cpp-utils/thread-job.hpp  \
								 ch-cpp-utils/thread-pool.hpp \
								 ch-cpp-utils/fs-watch.hpp \
								 ch-cpp-utils/events.hpp \
								 ch-cpp-utils/dirtree.hpp \
								 ch-cpp-utils/semaphore.hpp \
								 ch-cpp-utils/defines.hpp \
								 ch-cpp-utils/base64.h \
								 ch-cpp-utils/http-client.hpp \
								 ch-cpp-utils/http-request.hpp \
								 ch-cpp-utils/http-connection.hpp \
								 ch-cpp-utils/http-thread.hpp \
								 ch-cpp-utils/http-server-pool.hpp
